Changes for REDIPS.drag library

4.6.17
- added "clone" and "overwrite" options to the move_object() method
- improved get_position() method
- added "clone" and "overwrite" checkboxes to example18
- calling myhandler_cloned placed inside clone_div() method
- added private method reset_styles()

4.6.16
- fixed relocate() method - discarded "REDIPS.drag.obj !== from.childNodes[i]" condition from element filter
- fixed find_parent() method - prevented finding node itself (el = el.parentNode) - find_parent() from now starts from parent node
- resetting DIV styles to '' instead of -1, 0 and 'static'

4.6.15
- added public property REDIPS.drag.table_sort with default value "true"
  Table sort is feature where tables inside drop container are sorted on each element click. Sometimes this feature should be turned off when one table overlays the other using "position" style relative, fixed or absolute.
- added example23 - Shopping cart

4.6.14
- added public property REDIPS.drag.autoscroll with default value "true"
  If set to "false" then autoscroll option will be completely turned off for page and any DIV container with CSS style overflow set to anything but 'visible'
- added third optional "skip" parameter to the find_parent() method

4.6.13
- myhandler_deleted call is moved to the end inside element_deleted method
- it seemed that find_cell() method was not published as public - now it is

4.6.12
- added control inside REDIPS.drag.relocate() method - "from" and "to" input parameters should be element nodes

4.6.11
- added boolean parameter "cloned" to the myhandler_deleted event handler (reference of original DIV element is stored in REDIPS.drag.obj_old)

4.6.10
- fixed bug for dropped elements in iPad
  * it seems that Safari Mobile loses registrated events (traditional model) assigned to the DIV element
  * in element_drop() is added definition of event listener after appendChild/insertBefore (obj.onmousedown = handler_onmousedown; ...)

4.6.9